# UnivKbd

./: .gitignore  CMakeLists.txt  CustomDockWidget_8h_source.html  Key_8h_source.html  KeyboardLayout.cpp  Keyboard_8h_source.html  LICENSE  README.md  SimpleTextEditor.cpp  SimpleTextEditor.h  SimpleTextEditor_8h_source.html  VirtualKeyboardButton_8h_source.html  VirtualKeyboardConfigurationWidget_8h_source.html  VirtualKeyboardInnerWidget_8h_source.html  VirtualKeyboard_8h_source.html  annotated.html  azerty.txt  classUniQKey_1_1CustomDockWidget-members.html  classUniQKey_1_1CustomDockWidget.html  classUniQKey_1_1Key-members.html  classUniQKey_1_1Key.html  classUniQKey_1_1Keyboard-members.html  classUniQKey_1_1Keyboard.html  classUniQKey_1_1SimpleTextEditor-members.html  classUniQKey_1_1SimpleTextEditor.html  classUniQKey_1_1VirtualKeyboard-members.html  classUniQKey_1_1VirtualKeyboard.html  classUniQKey_1_1VirtualKeyboardButton-members.html  classUniQKey_1_1VirtualKeyboardButton.html  classUniQKey_1_1VirtualKeyboardConfigurationWidget-members.html  classUniQKey_1_1VirtualKeyboardConfigurationWidget.html  classUniQKey_1_1VirtualKeyboardInnerWidget-members.html  classUniQKey_1_1VirtualKeyboardInnerWidget.html  classUnivKbd_1_1CustomDockWidget-members.html  classUnivKbd_1_1CustomDockWidget.html  classUnivKbd_1_1Key-members.html  classUnivKbd_1_1Key.html  classUnivKbd_1_1Keyboard-members.html  classUnivKbd_1_1Keyboard.html  classUnivKbd_1_1SimpleTextEditor-members.html  (+20 more)
.github/workflows/: cmake.yml
UniQKey/: CustomDockWidget.h  Key.h  Keyboard.cpp  Keyboard.default.cpp  Keyboard.h  Keyboard.windows.cpp  KeyboardLayout.h  SimpleTextEditor.cpp  SimpleTextEditor.h  VirtualKeyboard.cpp  VirtualKeyboard.h  VirtualKeyboardButton.cpp  VirtualKeyboardButton.h  VirtualKeyboardConfigurationWidget.cpp  VirtualKeyboardConfigurationWidget.h  VirtualKeyboardInnerWidget.cpp  VirtualKeyboardInnerWidget.h
UnivKbd/: CustomDockWidget.h  Key.h  Keyboard.default.cpp  Keyboard.h  Keyboard.windows.cpp  SimpleTextEditor.cpp  SimpleTextEditor.h  UniQKey  VirtualKeyboard.cpp  VirtualKeyboard.h  VirtualKeyboardButton.cpp  VirtualKeyboardButton.h  VirtualKeyboardConfigurationWidget.cpp  VirtualKeyboardConfigurationWidget.h  VirtualKeyboardInnerWidget.cpp  VirtualKeyboardInnerWidget.h
cmake/: UniQKeyConfig.cmake.in  UnivKbdConfig.cmake.in
html/: Keyboard_8h_source.html  SimpleTextEditor_8h_source.html  classUniQKey_1_1Keyboard-members.html  classUniQKey_1_1VirtualKeyboard.html  classUniQKey_1_1VirtualKeyboardButton-members.html  classes.html  dir_49df835dfe6b3440edb6581e02cd90f5.html  index.html
html/search/: all_0.js  all_6.js  classes_1.js  classes_2.js  functions_1.js  functions_4.js  functions_6.js  functions_7.js
keyboards/: ADLaM.keyboard  Albanian.keyboard  Arabic (101).keyboard  Arabic (102) AZERTY.keyboard  Arabic (102).keyboard  Armenian Eastern.keyboard  Armenian Phonetic.keyboard  Armenian Typewriter.keyboard  Armenian Western.keyboard  Assamese - INSCRIPT.keyboard  Azerbaijani (Standard).keyboard  Azeri Cyrillic.keyboard  Azeri Latin.keyboard  Bashkir.keyboard  Belarusian.keyboard  Belgian (Comma).keyboard  Belgian French.keyboard  Bengali - INSCRIPT (Legacy).keyboard  Bengali - INSCRIPT.keyboard  Bengali.keyboard  Bosnian (Cyrillic).keyboard  Buginese.keyboard  Bulgarian (Latin).keyboard  Bulgarian (Phonetic Traditional).keyboard  Bulgarian (Phonetic).keyboard  Bulgarian (Typewriter).keyboard  Bulgarian.keyboard  Canadian French (Legacy).keyboard  Canadian French.keyboard  Canadian Multilingual Standard.keyboard  Central Atlas Tamazight.keyboard  Central Kurdish.keyboard  Cherokee Nation Phonetic.keyboard  Cherokee Nation.keyboard  Chinese (Simplified, Singapore) - US Keyboard.keyboard  Czech (QWERTY).keyboard  Czech.keyboard  Danish.keyboard  Devanagari - INSCRIPT.keyboard  Divehi Phonetic.keyboard  (+146 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
xml/: Key_8h.xml  Keyboard_8default_8cpp.xml  Keyboard_8h.xml  Keyboard_8windows_8cpp.xml  SimpleTextEditor_8cpp.xml  SimpleTextEditor_8h.xml  VirtualKeyboard_8cpp.xml  VirtualKeyboard_8h.xml  classUniQKey_1_1Key.xml  classUniQKey_1_1Keyboard.xml  classUniQKey_1_1SimpleTextEditor.xml  classUniQKey_1_1VirtualKeyboard.xml  classUniQKey_1_1VirtualKeyboardButton.xml  dir_49df835dfe6b3440edb6581e02cd90f5.xml  index.xml  namespaceUniQKey.xml
